--- a/MPfm/MPfm.Library/MPfm.Library.Android.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.Android.csproj
@@ -79,6 +79,9 @@
     <AndroidUseSharedRuntime>False</AndroidUseSharedRuntime>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Lib\iOS\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
