--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -295,5 +295,6 @@
     <Compile Include="Views\ISyncDownloadView.cs" />
     <Compile Include="Presenters\Interfaces\ISyncDownloadPresenter.cs" />
     <Compile Include="Presenters\SyncDownloadPresenter.cs" />
+    <Compile Include="Messages\PlayerPlaylistUpdatedMessage.cs" />
   </ItemGroup>
 </Project>
