Windows: Updated solution to build correctly, added BASS library and plugins, etc. Still not tied to the new MVP architecture.
Related to issue #422.

--- a/MPfm/MPfm.Player/MPfm.Player.csproj
+++ b/MPfm/MPfm.Player/MPfm.Player.csproj
@@ -70,6 +70,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Bass.Net">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\MPfm.Sound\Lib\Bass.Net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -77,9 +81,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Bass.Net">
-      <HintPath>..\MPfm.Sound\Lib\Bass.Net.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.csproj">
@@ -87,12 +88,9 @@
       <Name>MPfm.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\MPfm.Sound\MPfm.Sound.csproj">
-      <Project>{D92F718E-9A24-4B8B-9E40-77F93CF89EAE}</Project>
+      <Project>{d92f718e-9a24-4b8b-9e40-77f93cf89eae}</Project>
       <Name>MPfm.Sound</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Lib\Bass.Net.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
