Android: Pitch shifting and time shifting now work properly! Connected presenter/view logic for PitchShiftingFragment and TimeShiftingFragment.  EqualizerPresetsActivity can now be opened from PlayerActivity.
Related to issue #406.

--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -241,6 +241,7 @@
     <AndroidResource Include="Resources\animator\slide_out.xml" />
     <AndroidResource Include="Resources\animator\fade_in.xml" />
     <AndroidResource Include="Resources\xml\widget_player.xml" />
+    <AndroidResource Include="Resources\Menu\player_menu.xml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\armeabi\" />
